--- a/finsense/package.json
+++ b/finsense/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-session": "^1.14.0",
     "instagram": "0.0.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
