--- a/finsense/package.json
+++ b/finsense/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^2.0.0",
     "express": "~4.13.4",
     "express-session": "^1.14.0",
     "instagram": "0.0.4",
